template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "1-nodes centos-heat-new cluster.",
  "Parameters": {
    "KeyName": {
      "Default": "u-can-get-it-in-swft",
      "Type": "String",
      "Description": "Name of an existing KeyPair"
    },
    "ImageName": {
      "Default": "centos-heat-new",
      "Type": "String",
      "Description": "Name of image to work with"
    },
    "Flavor": {
      "Default": "m1.small",
      "Type": "String",
      "Description": "Instance size"
    },
    "ExtNetUuid": {
      "Default": "97e728ea-23a0-4d20-a7b7-1406a5815015",
      "Type": "String",
      "Description": "UUID of the external network to be used for external access"
    },
    "Router": {
      "Default": "40282410-66a0-48dc-b12b-e0c1b5a4b145",
      "Type": "String",
      "Description": "Existing router ID"
    }
  },
  "Resources": {
    "AllowAllSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "SecurityGroupIngress": [
          {
            "ToPort": "65535",
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0",
            "FromPort": "1"
          },
          {
            "ToPort": "65535",
            "IpProtocol": "udp",
            "CidrIp": "0.0.0.0/0",
            "FromPort": "1"
          },
          {
            "ToPort": "-1",
            "IpProtocol": "icmp",
            "CidrIp": "0.0.0.0/0",
            "FromPort": "-1"
          }
        ],
        "GroupDescription": "Open all ports, enable ping"
      }
    },
    "Network": {
      "Type": "OS::Quantum::Net",
      "Properties": {
        "name": "LocalNetwork"
      }
    },
    "Subnet": {
      "Type": "OS::Quantum::Subnet",
      "Properties": {
        "network_id": {
          "Ref": "Network"
        },
        "ip_version": 4,
        "cidr": "10.142.56.0/24",
        "value_specs": {
          "dns_nameservers": [
            "195.208.117.177"
          ]
        }
      }
    },
    "RouterInternalInterface": {
      "Type": "OS::Quantum::RouterInterface",
      "Properties": {
        "router_id": {
          "Ref": "Router"
        },
        "subnet_id": {
          "Ref": "Subnet"
        }
      }
    },
    "port1": {
      "Type": "OS::Quantum::Port",
      "Properties": {
        "network_id": {
          "Ref": "Network"
        },
        "fixed_ips": [
          {
            "subnet_id": {
              "Ref": "Subnet"
            },
            "ip_address": "10.142.56.3"
          }
        ],
        "security_groups": [
          {
            "Fn::GetAtt": [
              "AllowAllSecurityGroup",
              "ID"
            ]
          }
        ]
      },
      "DependsOn": "AllowAllSecurityGroup"
    },
    "FloatingIp1": {
      "Type": "OS::Quantum::FloatingIP",
      "Properties": {
        "floating_network_id": {
          "Ref": "ExtNetUuid"
        }
      }
    },
    "FloatingIpAssociate1": {
      "Type": "OS::Quantum::FloatingIPAssociation",
      "Properties": {
        "floatingip_id": {
          "Ref": "FloatingIp1"
        },
        "port_id": {
          "Ref": "port1"
        }
      },
      "DependsOn": "port1"
    },
    "node1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "UserData": {
          "Fn::Base64": {
            "Fn::Base64": "#!/bin/bash -v\necho -e \"\\nInstalling chef...\" > /dev/kmsg\nrpm -ivh http://xenlet.stu.neva.ru/chef-11.4.0-1.el6.x86_64.rpm &> /dev/kmsg\n/opt/aws/bin/cfn-init\n# Retrieving chef-client name from metadata \necho \"node_name \\\"$(curl http://169.254.169.254/latest/meta-data/instance-id)\\\"\" >> /etc/chef/client.rb\n# Runing chef-client\necho \"Running chef-recipes...\" > /dev/kmsg \n/usr/bin/chef-client -j /etc/chef/runlist.json &> /dev/kmsg\n\n"
          }
        },
        "NetworkInterfaces": [
          {
            "Ref": "port1"
          }
        ],
        "KeyName": {
          "Ref": "KeyName"
        },
        "InstanceType": {
          "Ref": "Flavor"
        },
        "ImageId": {
          "Ref": "ImageName"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Init": {
          "config": {
            "files": {
              "/etc/chef/client.rb": {
                "content": {
                  "Fn::Base64": "log_level        :auto\nlog_location     STDOUT\nchef_server_url  \"http://chef.stu.neva.ru:4000\"\nvalidation_client_name \"chef-validator\"\n"
                },
                "owner": "root",
                "group": "root",
                "mode": "000644"
              },
              "/etc/chef/runlist.json": {
                "content": {
                  "run_list": [
                    "recipe[selinux::disabled]",
                    "recipe[ambari::iptables]"
                  ]
                },
                "owner": "root",
                "group": "root",
                "mode": "000644"
              },
              "/etc/chef/validation.pem": {
                "content": {
                  "Fn::Base64": "-----BEGIN RSA PRIVATE KEY-----\nMIIEogIBAAKCAQEAyzZTYd0KL6056K9hiIoKtCWsQHNC32y2OEzpHT5ftFxjDi6f\nQzvv9iJmFd6miCT3VEBM7zzVH6XOnfS6cASPv+QiX6CkGRQB6Zl3ZmmzlDKswHAl\n9tVehJzQrVGPUh2mM/Xh/GfyhwMZHoXn3rtOy33AT15s+m7f9MGCwX10FNpf3Cng\nHCigKAke/Bw0oAZivkYLNjak7sHSuiNzjpFznSbbfhrFVpiByLKz+xPYxHM2iJXo\nUFrdt5RcgGTeQz0d1Sw2yZtJl3x7go+frDYHwigD2WAQer3B8G1Vu9Ke7NCMUu5R\nObafguChk3yMfCtj4GaTPZeh2lph6d3QzpvTkQIDAQABAoIBAG4VxP/8DZucXQWn\nlM+x8HB9BB56El0U+HXxfEuiUZhUgDjbmt2CZ9 [...]
                },
                "owner": "root",
                "group": "root",
                "mode": "000644"
              }
            },
            "commands": {
              "hostname2": {
                "command": "sed -ri 's#^HOSTNAME=.*#HOSTNAME=node1#' /etc/sysconfig/network"
              },
              "hostname": {
                "command": "hostname node1"
              },
              "hosts": {
                "command": "echo $'10.142.56.3  node1\n' >> /etc/hosts"
              }
            }
          }
        }
      }
    }
  }
}
